# ofs-repro

./: Dockerfile  Justfile  README.md  pyproject.toml  test.py
app/: kube.py  main.py  random_1mb.data  script.py
k8s/: pod.yaml  pv.yaml
o11y_debug/: compose.yaml  otel_collector.yaml
